﻿移植到 Minecraft Forge 1.20.1
基于 neoforge-dev/1.21.1 分支，新增 forge-dev/1.20.1：

- 构建：改用 net.neoforged.moddev.legacyforge，Forge 47.4.20 + Parchment 1.20.1，Java 17
- 元数据：neoforge.mods.toml 换成 mods.toml，mixin 配置声明到 JAR 清单，兼容级别 JAVA_17
- 注册：DeferredRegister 改用 ForgeRegistries，客户端内容拆分到独立的 @EventBusSubscriber
- 事件：数据生成/着色器/重载监听移到模组总线，客户端刻改用 TickEvent.ClientTickEvent
- 渲染：顶点流改回 vertex/color/uv/endVertex，网格改用 BufferBuilder + putBulkData，
  视锥矩阵改由 renderLevel 的渲染位姿栈捕获，区域缓存改用 createRegion 的方块范围重载
- 数据：StatePropertiesPredicate 用 JsonOps 桥接 Codec，移除 NeoForge 专属 Codec 工具
- 着色器：fog_distance 按 1.20.1 的 include 补上 ModelViewMat 参数
- 资源：重新生成 1.20.1 目录结构（advancements/recipes）